fix: the padding on the top and bottom of navbar are too much

--- a/SaaS-Website/css/styles.css
+++ b/SaaS-Website/css/styles.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   position: fixed;
   width: 100%;
-  padding: 30px 100px;
+  padding: 15px 100px;
   z-index: 10;
 }
 
